--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -94,7 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:elevation="10dp"
@@ -109,19 +109,21 @@
             android:src="@drawable/ic_magnify"
             />
 
-        <EditText
+        <AutoCompleteTextView
             android:id="@+id/init_location"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/ic_magnify"
-
+            android:maxLines="1"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:background="@null"
             android:hint="Enter boarding point"
             android:imeOptions="actionSearch"
             android:textColor="#000"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:privateImeOptions="actionSearch"
+            android:inputType="text"/>
 
 
 
@@ -131,7 +133,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:elevation="10dp"
@@ -145,7 +147,7 @@
             android:layout_marginLeft="10dp"
             android:src="@drawable/ic_magnify_terminate"
             />
-        <EditText
+        <AutoCompleteTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toRightOf="@id/ic_magnify_end"
@@ -154,8 +156,11 @@
             android:textColor="#000"
             android:id="@+id/terminate_location"
             android:background="@null"
+            android:maxLines="1"
             android:hint="Enter dropping point"
-            android:imeOptions="actionSearch"/>
+            android:inputType="text"
+            android:imeOptions="actionSearch"
+            android:privateImeOptions="actionSearch"/>
     </RelativeLayout>
 
 
