Added qr code scanner

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -64,7 +64,7 @@
             android:orientation="vertical"
             android:layout_marginTop="450dp">
 
-            <TextView
+            <Button
                 android:id="@+id/fare"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
